--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ install:
   - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-base.git C:\\projects\\soma-base"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
-  - "git clone --depth=50 --branch=master https://github.com/populse/populse_db.git C:\\projects\\populse_db"
+  - "git clone --depth=50 --branch=2.0 https://github.com/populse/populse_db.git C:\\projects\\populse_db"
   - "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
   - "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
   - "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
