--- a/.travis.yml
+++ b/.travis.yml
@@ -49,10 +49,7 @@ install:
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install importlib; fi
     #- pip install nose-cov
     - pip install codecov;
-    # run code quality checks (skip them on Mac OS because Python 3 is not
-    # available there)
     - if [[ $TRAVIS_OS_NAME == linux ]]; then pip install pre-commit; fi
-    - if [[ $TRAVIS_OS_NAME == linux ]]; then pre-commit run --all-files; fi
     # to test notebooks
     - pip install jupyter nbconvert
     - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.7" ]]; then sudo apt-get install -y pandoc graphviz; pip install sphinx sphinx-gallery pandoc nbsphinx "PyQt5<5.13"; fi
@@ -73,6 +70,9 @@ install:
 
 script:
     - coverage run -m capsul.test
+    # run code quality checks (skip them on Mac OS because Python 3 is not
+    # available there)
+    - if [[ $TRAVIS_OS_NAME == linux ]]; then pre-commit run --all-files; fi
 
 after_success:
     - codecov
@@ -86,3 +86,7 @@ deploy:
   on:
     branch: master
     condition: $PUSH_DOC_TO_GH_PAGES == yes && $TRAVIS_OS_NAME == linux && $TRAVIS_PYTHON_VERSION == 3.7
+
+cache:
+  directories:
+    - $HOME/.cache/pre-commit
