--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ build: off
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - "python -m pip install --upgrade pip"
+  - "pip install pydantic"
   - "pip install numpy"
   - "pip install six>=1.13"
   - "pip install traits"
@@ -16,9 +17,9 @@ install:
   - "pip install python-dateutil"
   - "pip install nipype"
   #- "pip install soma-workflow"
-  - "git clone --depth=50 --branch=master https://github.com/populse/soma-base.git C:\\projects\\soma-base"
+  - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git C:\\projects\\soma-base"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
-  - "git clone --depth=50 --branch=2.0 https://github.com/populse/populse_db.git C:\\projects\\populse_db"
+  - "git clone --depth=50 --branch=master https://github.com/populse/populse_db.git C:\\projects\\populse_db"
   - "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
   - "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
   - "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
