--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,12 @@
+image:
+  - Visual Studio 2019
+
 environment:
 
   matrix:
 
-    - PYTHON: "C:\\Python38"
+    - PYTHON: "C:\\Python39"
+    - PYTHON: "C:\\Python310"
 
 build: off
 
@@ -18,12 +22,17 @@ install:
   - "pip install nipype"
   #- "pip install soma-workflow"
   - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git C:\\projects\\soma-base"
+  - "python -c 'import os; print(os.getcwd())'"
+  - "cd C:\\projects\\soma-base"
+  - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
-  - "git clone --depth=50 --branch=master https://github.com/populse/populse_db.git C:\\projects\\populse_db"
-  - "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
-  - "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
-  - "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
-  - "SET PYTHONPATH=C:\\projects\\populse_db\\python;%PYTHONPATH%"
+  - "cd C:\\projects\\soma-workflow"
+  - "python setup.py install"
+  #- "git clone --depth=50 --branch=master https://github.com/populse/populse_db.git C:\\projects\\populse_db"
+  #- "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
+  #- "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
+  #- "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
+  #- "SET PYTHONPATH=C:\\projects\\populse_db\\python;%PYTHONPATH%"
   - "python setup.py install"
 
 test_script:
