--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,8 +22,7 @@ install:
   - "pip install nipype"
   #- "pip install soma-workflow"
   - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git C:\\projects\\soma-base"
-  - "python -c 'import os; print(os.getcwd())'"
-  - "cd C:\\projects\\soma-base"
+  - "pushd C:\\projects\\soma-base"
   - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
   - "cd C:\\projects\\soma-workflow"
@@ -33,6 +32,7 @@ install:
   #- "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\populse_db\\python;%PYTHONPATH%"
+  - "popd"
   - "python setup.py install"
 
 test_script:
