--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ install:
   #- "pip install soma-workflow"
   - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git C:\\projects\\soma-base"
   - "set MAINDIR=%CD%"
+  - "echo %MAINDIR%"
   - "cd C:\\projects\\soma-base"
   - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
@@ -33,7 +34,7 @@ install:
   #- "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\populse_db\\python;%PYTHONPATH%"
-  - "chdir /c %MAINDIR%"
+  - "cd %MAINDIR%"
   - "python setup.py install"
 
 test_script:
