--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,6 @@ install:
   #- "pip install soma-workflow"
   - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git C:\\projects\\soma-base"
   - "set MAINDIR=%CD%"
-  - "echo %MAINDIR%"
   - "cd C:\\projects\\soma-base"
   - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
@@ -39,6 +38,8 @@ install:
 
 test_script:
   - "python --version"
+  - echo %PYTHONPATH%
+  - "python -c \"import sys; print(sys.path)\""
   - "python -m capsul.test"
 
 notifications:
