disable test using python 3.10 on windows
since it cannot install all dependencies yet (#213)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
   matrix:
 
     - PYTHON: "C:\\Python39"
-    - PYTHON: "C:\\Python310"
+    #- PYTHON: "C:\\Python310"
 
 build: off
 
