--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,10 @@ install:
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
   - "cd C:\\projects\\soma-workflow"
   - "python setup.py install"
-  #- "git clone --depth=50 --branch=master https://github.com/populse/populse_db.git C:\\projects\\populse_db"
-  #- "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
+  - "git clone --depth=50 --branch=3.0 https://github.com/populse/populse_db.git C:\\projects\\populse_db"
+  - "cd C:\\projects\\populse_db"
+  - "python setup.py install"
+  ##- "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
   #- "SET PYTHONPATH=C:\\projects\\populse_db\\python;%PYTHONPATH%"
