--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,27 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+    rev: v4.0.1
     hooks:
     # TODO: activate the remaining checks and commit the large diff later
     -   id: check-added-large-files
     -   id: check-case-conflict
     -   id: check-executables-have-shebangs
     -   id: check-json
-    #-   id: check-merge-conflict
+    -   id: check-merge-conflict
+    -   id: check-shebang-scripts-are-executable
     -   id: check-symlinks
     -   id: check-xml
     -   id: check-yaml
     -   id: debug-statements
-    # -   id: end-of-file-fixer
+    -   id: destroyed-symlinks
+    -   id: end-of-file-fixer
+        exclude: \.min\.js$
+    -   id: fix-byte-order-marker
     -   id: fix-encoding-pragma
-    # -   id: trailing-whitespace
+    #-   id: trailing-whitespace  # not ready yet
 
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+-   repo: https://github.com/PyCQA/flake8
+    rev: 4.0.1
     hooks:
     -   id: flake8
         name: flake8 under python2
