#244 try to use Python 3 with AppVeyor on Ubuntu

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,30 +7,30 @@ build: off
 
 install:
   - "export MAINDIR=$PWD"
-  - "python -m pip install --upgrade pip"
-  - "pip install pydantic"
-  - "pip install numpy"
-  - "pip install six>=1.13"
-  - "pip install traits"
-  - "pip install python-dateutil"
-  - "pip install nipype"
+  - "python3 -m pip install --upgrade pip"
+  - "pip3 install pydantic"
+  - "pip3 install numpy"
+  - "pip3 install six>=1.13"
+  - "pip3 install traits"
+  - "pip3 install python-dateutil"
+  - "pip3 install nipype"
   - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git /tmp/soma-base"
   - "cd /tmp/soma-base"
-  - "python setup.py install"
+  - "python3 setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git /tmp/soma-workflow"
   - "cd /tmp/soma-workflow"
-  - "python setup.py install"
+  - "python3 setup.py install"
   - "git clone --depth=50 --branch=3.0 https://github.com/populse/populse_db.git /tmp/populse_db"
   - "cd /tmp/populse_db"
-  - "python setup.py install"
+  - "python3 setup.py install"
   - "cd $MAINDIR"
-  - "python setup.py install"
+  - "python3 setup.py install"
 
 test_script:
-  - "python --version"
+  - "python3 --version"
   - echo $PYTHONPATH
-  - "python -c \"import sys; print(sys.path)\""
-  - "python -m capsul.test"
+  - "python3 -c \"import sys; print(sys.path)\""
+  - "python3 -m capsul.test"
 
 notifications:
   - provider: Email
