--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ install:
   # - pip3 install traits
   # - pip3 install python-dateutil
   # - pip3 install nipype
-  - python3 -m pip install https://github.com/populse/soma-base.git@pydantic_controller
-  - python3 -m pip install https://github.com/populse/soma-workflow.git
-  - python3 -m pip install https://github.com/populse/populse_db.git@3.0
+  - python3 -m pip install git+https://github.com/populse/soma-base.git@pydantic_controller
+  - python3 -m pip install git+https://github.com/populse/soma-workflow.git
+  - python3 -m pip install git+https://github.com/populse/populse_db.git@3.0
   # - "git clone --depth=50 --branch=pydantic_controller https://github.com/populse/soma-base.git /tmp/soma-base"
   # - "cd /tmp/soma-base"
   # - "python3 setup.py install"
@@ -29,7 +29,7 @@ install:
   # - "cd $MAINDIR"
   # - "python3 setup.py install"
   - python3 -m pip install .
-  
+
 test_script:
   - "python3 --version"
   - echo $PYTHONPATH
