#244 try to use Python 3 with AppVeyor on Ubuntu

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,11 +11,15 @@ install:
   - $python -m pip install git+https://github.com/populse/soma-base.git@pydantic_controller
   - $python -m pip install git+https://github.com/populse/soma-workflow.git
   - $python -m pip install git+https://github.com/populse/populse_db.git@3.0
+  - sudo apt install tree
+  - echo $PWD
+  - tree
   - $python -m pip install .
 
 test_script:
   - python=$HOME/venv$PYTHON/bin/python
   - $python --version
+  - $python -m pip freeze
   - $python -m capsul.test
 
 notifications:
