--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -1,17 +1,15 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: test_v3
+name: Test v3
 
 on:
   push:
     branches:
-    - master
-    - celery_redis
+    - pydantic_controller
     
   pull_request:
     branches:
-    - celery_redis
     - pydantic_controller
 
 permissions:
