--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.1.0
     hooks:
     # TODO: activate the remaining checks and commit the large diff later
     -   id: check-added-large-files
@@ -14,14 +14,13 @@ repos:
     -   id: check-yaml
     -   id: debug-statements
     -   id: destroyed-symlinks
-    -   id: end-of-file-fixer
-        exclude: \.min\.js$
+    # -   id: end-of-file-fixer
     -   id: fix-byte-order-marker
     -   id: fix-encoding-pragma
     #-   id: trailing-whitespace  # not ready yet
 
 -   repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: 3.9.2
     hooks:
     -   id: flake8
         name: flake8 under python2
