--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,14 @@ repos:
     -   id: check-added-large-files
     -   id: check-case-conflict
     -   id: check-executables-have-shebangs
-    -   id: check-json
     -   id: check-merge-conflict
     -   id: check-shebang-scripts-are-executable
     -   id: check-symlinks
     -   id: check-xml
     -   id: check-yaml
+        # FOMs have a .json extension but they are parsed as YAML
+        types: [file]
+        types_or: [yaml, json]
     -   id: debug-statements
     -   id: destroyed-symlinks
     # -   id: end-of-file-fixer
