--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -26,6 +26,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
+    - name: Install Redis
+      run: |
+        sudo apt update
+        sudo apt install redis-server
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
