--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -1,16 +1,18 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test v3
+name: test_v3
 
 on:
   push:
     branches:
-    - pydantic_controller
+    - "3.0"
     
   pull_request:
     branches:
-    - pydantic_controller
+    - "3.0"
+
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -26,6 +28,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
+    - name: Install Redis
+      run: |
+        sudo apt update
+        sudo apt install redis-server
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
