--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install git+https://github.com/populse/soma-base.git@pydantic_controller
+        pip install git+https://github.com/populse/soma-base.git@6.0
         pip install git+https://github.com/populse/soma-workflow.git
         pip install git+https://github.com/populse/populse_db.git@3.0
         pip install .
