--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -13,23 +13,55 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  doc:
+  tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        # Run in all these versions of Python
+        python-version: [3.9, 3.10, 3.11]
+        
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: "Set up Python ${{ matrix.python-version }}"
+        uses: actions/setup-python@v4
+        with:
+          python-version: "${{ matrix.python-version }}"
+
+      - name: "Install dependencies"
+        run: |
+          python -m pip install --upgrade pip
+          pip install numpy
+          pip install six>=1.13
+          pip install traits
+          pip install python-dateutil
+          pip install nipype
+          pip install git+https://github.com/populse/soma-base.git
+          pip install git+https://github.com/populse/soma-workflow.git
+          pip install https://github.com/populse/populse_db.git
+          python setup.py install
+
+      - name: "Run tests"
+        run: |
+          python -m capsul.test
+  
+  documentation:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: "Set up Python"
-        uses: actions/setup-python@v1
+      - name: "Set up Python 3.9"
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
-
+          python-version: "3.9"
       - name: "Install Python dependencies"
         run: |
           pip3 install setuptools
@@ -50,7 +82,6 @@ jobs:
           cd soma-workflow
           python setup.py install
           popd
-          # python setup.py install
 
       - name: "Build Sphinx Doc"
         run: |
