Remove french because of CodeSpell

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -95,11 +95,9 @@ jobs:
           touch build/html/.nojekyll
           cd ..
 
-      # 3. Déploiement sur les Github Pages
-
       - name: "Deploy Github Pages"
         uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages     # <- Branche sur laquelle seront commités les fichiers
-          FOLDER: doc/build/html/  # <- Dossier contenant notre documentation générée
+          BRANCH: gh-pages
+          FOLDER: doc/build/html/
