--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -13,7 +13,13 @@ on:
     - "3.0"
 
   workflow_dispatch:
-
+    inputs:
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+        required: false
+        default: false
+        
 permissions:
   contents: read
 
@@ -24,14 +30,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
+    
     - name: Install Redis
       run: |
         sudo apt update
         sudo apt install redis-server
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -39,7 +48,14 @@ jobs:
         pip install git+https://github.com/populse/soma-workflow.git
         pip install git+https://github.com/populse/populse_db.git@3.0
         pip install .
+    
     - name: Test
       run: |
         python -m capsul.test
-        
+    
+    # Enable tmate debugging of manually-triggered workflows if the input option was provided
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}        
+      with:
+        sudo: false
