Start applying repo-review suggestions
	RF201: Avoid using deprecated config settings
	extend-ignore deprecated, use ignore instead (identical)

--- a/ruff.toml
+++ b/ruff.toml
@@ -7,7 +7,7 @@ extend-select = [
   "I",   # https://docs.astral.sh/ruff/rules/#isort-i
   "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
 ]
-extend-ignore = [
+ignore = [
   # https://docs.astral.sh/ruff/rules/redundant-open-modes/
   # we prefer explicit to implicit open modes
   "UP015",
