--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,14 +24,6 @@ repos:
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.3.0
     hooks:
-    #-   id: ruff
+    -   id: ruff
     -   id: ruff-format
         exclude: '^doc/'
-
--   repo: https://github.com/PyCQA/flake8
-    rev: 5.0.4
-    hooks:
-    -   id: flake8
-        name: flake8
-        args:
-        - --ignore=F722,F821
