Address repo-review issue GH102: Auto-cancel on repeated PRs
At least one workflow should auto-cancel.

https://learn.scientific-python.org/development/guides/repo-review/?repo=populse%2Fcapsul&branch=3.0

--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -1,6 +1,6 @@
+---
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: test_v3
 
 on:
@@ -19,6 +19,10 @@ on:
         description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
         required: false
         default: false
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: read
